welcome.lessons.welcome.array.array667.Array667.scala.error
array667:4: error: value lenght is not a member of Array[Int]
	for ( k <- 0 to nums.lenght-2) 
                             ^