welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
var a =0 

	for ( k <- 0 to nums.lenght-2) 
	if ((nums(k) == 6 && nums(k+1) == 6 ) || (nums(k) == 6 && nums(k+1) == 7 )) a=a+1
	return a
}
